[gd_scene load_steps=9 format=3 uid="uid://heh46q4r4ek4"]

[ext_resource type="Theme" uid="uid://bcma3f2wjixis" path="res://ui_themes/ui_theme_default.tres" id="1_18p78"]
[ext_resource type="Script" path="res://Levels/menus/MainMenu.gd" id="1_rcmn6"]
[ext_resource type="Texture2D" uid="uid://cdo5ju2to2ps8" path="res://Levels/menu.png" id="3_do2h5"]
[ext_resource type="Texture2D" uid="uid://d2c4wu66njg6c" path="res://Levels/menu_guy.png" id="4_w76gm"]
[ext_resource type="AudioStream" uid="uid://cn8dhruegjdrf" path="res://audio/music/MenuAmbience_free.mp3" id="5_3u85p"]
[ext_resource type="FontFile" uid="uid://du4ks47g1fbxf" path="res://Fonts/Clouds_of_Despair.ttf" id="5_stlpi"]
[ext_resource type="AudioStream" uid="uid://bdw2t3wmswepw" path="res://audio/music/Sizzle_EverHeat_Freesound.wav" id="6_1d4h1"]

[sub_resource type="LabelSettings" id="LabelSettings_1fxug"]
line_spacing = -8.0
font = ExtResource("5_stlpi")
font_size = 24
font_color = Color(0.223529, 0.184314, 0.211765, 1)
outline_size = 8
outline_color = Color(1, 0.901961, 0.819608, 1)

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_18p78")
script = ExtResource("1_rcmn6")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_do2h5")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -640.0
offset_top = -360.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("4_w76gm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_right = 330

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Leftside" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Leftside"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
text = "Nothing Shady
at THIS BBQ!"
label_settings = SubResource("LabelSettings_1fxug")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="MarginContainer/HBoxContainer/Leftside"]
layout_mode = 2
text = "Play"

[node name="TutorialButton" type="Button" parent="MarginContainer/HBoxContainer/Leftside"]
layout_mode = 2
text = "Tutorial"

[node name="LeaderboardButton" type="Button" parent="MarginContainer/HBoxContainer/Leftside"]
layout_mode = 2
text = "Leaderboard"

[node name="CreditsButton" type="Button" parent="MarginContainer/HBoxContainer/Leftside"]
layout_mode = 2
text = "Credits"

[node name="OptionsButton" type="Button" parent="MarginContainer/HBoxContainer/Leftside"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="MarginContainer/HBoxContainer/Leftside"]
layout_mode = 2
text = "Quit"

[node name="LogoutButton" type="Button" parent="."]
custom_minimum_size = Vector2(75, 0)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -83.0
offset_top = -350.0
offset_right = -8.0
offset_bottom = -323.0
grow_horizontal = 0
grow_vertical = 0
text = "Logout"

[node name="Ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_3u85p")
autoplay = true
bus = &"Music"

[node name="Sizzle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_1d4h1")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="MarginContainer/HBoxContainer/Leftside/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Leftside/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Leftside/LeaderboardButton" to="." method="_on_leaderboard_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Leftside/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Leftside/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Leftside/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="LogoutButton" to="." method="_on_logout_button_pressed"]
